# lvgl-hmi-lib

./: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  lvgl.pc.in
